--- a/src/main/resources/static/docs/asciidoc/index.adoc
+++ b/src/main/resources/static/docs/asciidoc/index.adoc
@@ -56,3 +56,22 @@ include::{snippets}/profileDetails/http-response.adoc[]
 
 .response-fields
 include::{snippets}/profileDetails/response-fields.adoc[]
+
+=== 계정 수정
+.curl-request
+include::{snippets}/accountModify/curl-request.adoc[]
+
+.http-request
+include::{snippets}/accountModify/http-request.adoc[]
+
+.request-headers
+include::{snippets}/accountModify/request-headers.adoc[]
+
+.request-fields
+include::{snippets}/accountModify/request-fields.adoc[]
+
+.http-response
+include::{snippets}/accountModify/http-response.adoc[]
+
+.response-fields
+include::{snippets}/accountModify/response-fields.adoc[]
