--- a/src/main/resources/static/docs/asciidoc/index.adoc
+++ b/src/main/resources/static/docs/asciidoc/index.adoc
@@ -89,7 +89,7 @@ include::{snippets}/accountDelete/request-headers.adoc[]
 .http-response
 include::{snippets}/accountDelete/http-response.adoc[]
 
-== VideoFileController
+== VideoController
 === 비디오 스트리밍
 .curl-request
 include::{snippets}/videoStream/curl-request.adoc[]
@@ -102,3 +102,22 @@ include::{snippets}/videoStream/request-headers.adoc[]
 
 .http-response
 include::{snippets}/videoStream/http-response.adoc[]
+
+=== 비디오 업로드
+.curl-request
+include::{snippets}/videoAdd/curl-request.adoc[]
+
+.http-request
+include::{snippets}/videoAdd/http-request.adoc[]
+
+.request-headers
+include::{snippets}/videoAdd/request-headers.adoc[]
+
+.request-parts
+include::{snippets}/videoAdd/request-parts.adoc[]
+
+.http-response
+include::{snippets}/videoAdd/http-response.adoc[]
+
+.response-fields
+include::{snippets}/videoAdd/response-fields.adoc[]
