광고 영상 추가 API 명세 작성 - 멀티파트파일이 들어간 객체를 @ModelAttribute로 요청할 때   멀티파트파일 외의 필드를 문서화 할 수 없는 문제가 있음

--- a/src/main/resources/static/docs/asciidoc/index.adoc
+++ b/src/main/resources/static/docs/asciidoc/index.adoc
@@ -121,3 +121,24 @@ include::{snippets}/videoAdd/http-response.adoc[]
 
 .response-fields
 include::{snippets}/videoAdd/response-fields.adoc[]
+
+== VideoController
+
+=== 광고 영상 업로드
+.curl-request
+include::{snippets}/adVideoAdd/curl-request.adoc[]
+
+.http-request
+include::{snippets}/adVideoAdd/http-request.adoc[]
+
+.request-headers
+include::{snippets}/adVideoAdd/request-headers.adoc[]
+
+.request-parts
+include::{snippets}/adVideoAdd/request-parts.adoc[]
+
+.http-response
+include::{snippets}/adVideoAdd/http-response.adoc[]
+
+.response-fields
+include::{snippets}/adVideoAdd/response-fields.adoc[]
