--- a/src/main/resources/static/docs/asciidoc/index.adoc
+++ b/src/main/resources/static/docs/asciidoc/index.adoc
@@ -22,7 +22,7 @@ include::{snippets}/login/request-fields.adoc[]
 .http-response
 include::{snippets}/login/http-response.adoc[]
 
-response-headers
+.response-headers
 include::{snippets}/login/response-headers.adoc[]
 
 === 계정 추가
