--- a/src/main/resources/static/docs/asciidoc/index.adoc
+++ b/src/main/resources/static/docs/asciidoc/index.adoc
@@ -175,6 +175,25 @@ include::{snippets}/boardAdd/http-response.adoc[]
 .response-fields
 include::{snippets}/boardAdd/response-fields.adoc[]
 
+=== 게시물 상세 조회
+.curl-request
+include::{snippets}/boardDetails/curl-request.adoc[]
+
+.http-request
+include::{snippets}/boardDetails/http-request.adoc[]
+
+.request-headers
+include::{snippets}/boardDetails/request-headers.adoc[]
+
+.path-parameters
+include::{snippets}/boardDetails/path-parameters.adoc[]
+
+.http-response
+include::{snippets}/boardDetails/http-response.adoc[]
+
+.response-fields
+include::{snippets}/boardDetails/response-fields.adoc[]
+
 === 게시물 수정
 .curl-request
 include::{snippets}/boardUpdate/curl-request.adoc[]
