--- a/src/main/resources/static/docs/asciidoc/index.adoc
+++ b/src/main/resources/static/docs/asciidoc/index.adoc
@@ -232,6 +232,25 @@ include::{snippets}/deleteBoard/path-parameters.adoc[]
 .http-response
 include::{snippets}/deleteBoard/http-response.adoc[]
 
+=== 게시물 통계 목록 조회
+.curl-request
+include::{snippets}/boardStatisticList/curl-request.adoc[]
+
+.http-request
+include::{snippets}/boardStatisticList/http-request.adoc[]
+
+.request-headers
+include::{snippets}/boardStatisticList/request-headers.adoc[]
+
+.query-parameters
+include::{snippets}/boardStatisticList/query-parameters.adoc[]
+
+.http-response
+include::{snippets}/boardStatisticList/http-response.adoc[]
+
+.response-fields
+include::{snippets}/boardStatisticList/response-fields.adoc[]
+
 === 조회수 증가
 .curl-request
 include::{snippets}/upViews/curl-request.adoc[]
