--- a/src/main/resources/static/docs/asciidoc/index.adoc
+++ b/src/main/resources/static/docs/asciidoc/index.adoc
@@ -59,22 +59,22 @@ include::{snippets}/profileDetails/response-fields.adoc[]
 
 === 계정 수정
 .curl-request
-include::{snippets}/accountModify/curl-request.adoc[]
+include::{snippets}/accountUpdate/curl-request.adoc[]
 
 .http-request
-include::{snippets}/accountModify/http-request.adoc[]
+include::{snippets}/accountUpdate/http-request.adoc[]
 
 .request-headers
-include::{snippets}/accountModify/request-headers.adoc[]
+include::{snippets}/accountUpdate/request-headers.adoc[]
 
 .request-fields
-include::{snippets}/accountModify/request-fields.adoc[]
+include::{snippets}/accountUpdate/request-fields.adoc[]
 
 .http-response
-include::{snippets}/accountModify/http-response.adoc[]
+include::{snippets}/accountUpdate/http-response.adoc[]
 
 .response-fields
-include::{snippets}/accountModify/response-fields.adoc[]
+include::{snippets}/accountUpdate/response-fields.adoc[]
 
 === 계정 삭제
 .curl-request
@@ -89,33 +89,23 @@ include::{snippets}/accountDelete/request-headers.adoc[]
 .http-response
 include::{snippets}/accountDelete/http-response.adoc[]
 
+=== 계정 ID 목록 조회
+.curl-request
+include::{snippets}/accountIdList/curl-request.adoc[]
+
+.http-request
+include::{snippets}/accountIdList/http-request.adoc[]
+
+.query-parameters
+include::{snippets}/accountIdList/query-parameters.adoc[]
+
+.http-response
+include::{snippets}/accountIdList/http-response.adoc[]
+
+.response-fields
+include::{snippets}/accountIdList/response-fields.adoc[]
+
 == VideoController
-=== 비디오 스트리밍
-.curl-request
-include::{snippets}/videoStream/curl-request.adoc[]
-
-.http-request
-include::{snippets}/videoStream/http-request.adoc[]
-
-.request-headers
-include::{snippets}/videoStream/request-headers.adoc[]
-
-.http-response
-include::{snippets}/videoStream/http-response.adoc[]
-
-=== 광고 영상 조회
-.curl-request
-include::{snippets}/adVideoDetails/curl-request.adoc[]
-
-.http-request
-include::{snippets}/adVideoDetails/http-request.adoc[]
-
-.path-parameters
-include::{snippets}/adVideoDetails/path-parameters.adoc[]
-
-.http-response
-include::{snippets}/adVideoDetails/http-response.adoc[]
-
 === 비디오 업로드
 .curl-request
 include::{snippets}/videoAdd/curl-request.adoc[]
@@ -135,7 +125,7 @@ include::{snippets}/videoAdd/http-response.adoc[]
 .response-fields
 include::{snippets}/videoAdd/response-fields.adoc[]
 
-== VideoController
+== AdVideoController
 === 광고 영상 업로드
 .curl-request
 include::{snippets}/adVideoAdd/curl-request.adoc[]
@@ -154,6 +144,36 @@ include::{snippets}/adVideoAdd/http-response.adoc[]
 
 .response-fields
 include::{snippets}/adVideoAdd/response-fields.adoc[]
+
+== VideoFileController
+=== 영상 조회(스트리밍)
+.curl-request
+include::{snippets}/videoStream/curl-request.adoc[]
+
+.http-request
+include::{snippets}/videoStream/http-request.adoc[]
+
+.request-headers
+include::{snippets}/videoStream/request-headers.adoc[]
+
+.path-parameters
+include::{snippets}/videoStream/path-parameters.adoc[]
+
+.http-response
+include::{snippets}/videoStream/http-response.adoc[]
+
+=== 영상 조회(프로그래시브)
+.curl-request
+include::{snippets}/videoProgressive/curl-request.adoc[]
+
+.http-request
+include::{snippets}/videoProgressive/http-request.adoc[]
+
+.path-parameters
+include::{snippets}/videoProgressive/path-parameters.adoc[]
+
+.http-response
+include::{snippets}/videoProgressive/http-response.adoc[]
 
 == BoardController
 === 게시물 추가
@@ -232,40 +252,19 @@ include::{snippets}/deleteBoard/path-parameters.adoc[]
 .http-response
 include::{snippets}/deleteBoard/http-response.adoc[]
 
-=== 게시물 통계 목록 조회
-.curl-request
-include::{snippets}/boardStatisticList/curl-request.adoc[]
-
-.http-request
-include::{snippets}/boardStatisticList/http-request.adoc[]
-
-.request-headers
-include::{snippets}/boardStatisticList/request-headers.adoc[]
-
-.query-parameters
-include::{snippets}/boardStatisticList/query-parameters.adoc[]
-
-.http-response
-include::{snippets}/boardStatisticList/http-response.adoc[]
-
-.response-fields
-include::{snippets}/boardStatisticList/response-fields.adoc[]
-
+== BoardStatisticsController
 === 조회수 증가
 .curl-request
-include::{snippets}/upViews/curl-request.adoc[]
+include::{snippets}/viewsUp/curl-request.adoc[]
 
 .http-request
-include::{snippets}/upViews/http-request.adoc[]
+include::{snippets}/viewsUp/http-request.adoc[]
 
 .path-parameters
-include::{snippets}/upViews/path-parameters.adoc[]
-
-.request-headers
-include::{snippets}/upViews/request-headers.adoc[]
+include::{snippets}/viewsUp/path-parameters.adoc[]
 
 .http-response
-include::{snippets}/upViews/http-response.adoc[]
+include::{snippets}/viewsUp/http-response.adoc[]
 
 === 재생시간 추가
 .curl-request
@@ -296,9 +295,27 @@ include::{snippets}/adViewsUp/path-parameters.adoc[]
 .http-response
 include::{snippets}/adViewsUp/http-response.adoc[]
 
+=== 게시물 통계 목록 조회
+.curl-request
+include::{snippets}/boardStatisticList/curl-request.adoc[]
+
+.http-request
+include::{snippets}/boardStatisticList/http-request.adoc[]
+
+.request-headers
+include::{snippets}/boardStatisticList/request-headers.adoc[]
+
+.query-parameters
+include::{snippets}/boardStatisticList/query-parameters.adoc[]
+
+.http-response
+include::{snippets}/boardStatisticList/http-response.adoc[]
+
+.response-fields
+include::{snippets}/boardStatisticList/response-fields.adoc[]
+
 == WatchHistoryController
 === 시청 기록 업데이트
-
 .curl-request
 include::{snippets}/watchHistoryUpdate/curl-request.adoc[]
 
